# tailscale-rmcp

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Justfile  README.md  config.toml  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  install.sh  manifest  release-please-config.json  server.json  taplo.toml
.cargo/: config.toml
.config/: nextest.toml
.github/workflows/: npm-package.yml  openwiki-update.yml  release-please.yml  release.yml
config/: Dockerfile  mcporter.json
docs/: CHECKLIST.md  CLI.md  CONFIG.md  GUARDRAILS.md  INVENTORY.md  OAUTH.md  README.md  RUST.md  SETUP.md  expansion.md
docs/internal/: auth-routing.md  rmcp-auth-spike.md
docs/mcp/: AUTH.md  CICD.md  CLAUDE.md  CONNECT.md  DEPLOY.md  DEV.md  ELICITATION.md  ENV.md  LOGS.md  MCPORTER.md  MCPUI.md  PATTERNS.md  PRE-COMMIT.md  PUBLISH.md  RESOURCES.md  SCHEMA.md  TESTS.md  TOOLS.md  TRANSPORT.md  WEBMCP.md
docs/repo/: CLAUDE.md  MEMORY.md  RECIPES.md  REPO.md  RULES.md  SCRIPTS.md
docs/sessions/: 2026-07-23-runtime-configuration-audit.md
docs/stack/: ARCH.md  CLAUDE.md  PRE-REQS.md  TECH.md
openwiki/: .last-update.json  index.md  openwiki-update.md  quickstart.md
plugins/tailscale/: .mcp.json
plugins/tailscale/.claude-plugin/: plugin.json
plugins/tailscale/.codex-plugin/: plugin.json
plugins/tailscale/hooks/: hooks.json  plugin-setup.sh
plugins/tailscale/scripts/: plugin-setup.sh
plugins/tailscale/skills/tailscale/: SKILL.md
scripts/: install.sh  refresh-docs.sh
src/: app.rs  cli.rs  config.rs  lib.rs  logging.rs  main.rs  mcp.rs  observability.rs  setup.rs  tailscale.rs  token_limit.rs
src/logging/: aurora.rs
src/mcp/: metadata.rs  prompts.rs  rmcp_server.rs  routes.rs  schemas.rs  tools.rs
tests/: cli_parse.rs  destructive_gate.rs  setup_cli.rs  tool_dispatch.rs
tests/mcporter/: test-tools.sh
xtask/: Cargo.toml
xtask/src/: main.rs
