[workspace]
members = [".", "xtask"]
resolver = "2"

[package]
name = "rustscale"
version = "0.1.2"
edition = "2021"
rust-version = "1.86"
description = "Tailscale MCP server — REST API bridge"
autobins = false

[[bin]]
name = "rtailscale"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP / MCP transport
axum = "0.8"
rmcp = { version = "1.6.0", default-features = false, features = [
  "server",
  "macros",
  "transport-streamable-http-server",
  "transport-io",
] }
tower-http = { version = "0.6", features = ["cors", "limit", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Config
toml = "0.8"

# OAuth + JWT
lab-auth = { git = "https://github.com/jmagar/lab.git", rev = "87cec3241f9baef22335de9cc8629ebbcd8ba047", package = "lab-auth" }
url = "2"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt", "chrono"] }

# Errors
anyhow = "1"
dotenvy = "0.15.7"

[features]
test-support = []

[dev-dependencies]
rustscale = { path = ".", features = ["test-support"] }
tokio = { version = "1", features = ["full"] }
tempfile = "3"
