[workspace]
members = [".", "xtask"]
resolver = "2"

[package]
name = "tailscale-rmcp"
version = "0.1.3"
edition = "2021"
rust-version = "1.86"
categories = ["command-line-utilities", "development-tools"]
keywords = ["mcp", "tailscale", "tailnet", "networking", "rmcp"]
repository = "https://github.com/jmagar/rtailscale"
homepage = "https://github.com/jmagar/rtailscale#readme"
description = "Rust MCP server and CLI for Tailscale tailnet operations across devices, users, keys, and policy workflows."
autobins = false

[[bin]]
name = "rtailscale"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP / MCP transport
axum = "0.8"
rmcp = { version = "1.6.0", default-features = false, features = [
  "server",
  "macros",
  "transport-streamable-http-server",
  "transport-io",
] }
tower-http = { version = "0.6", features = ["cors", "limit", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Config
toml = "0.8"

# OAuth + JWT
lab-auth = { git = "https://github.com/jmagar/lab.git", rev = "87cec3241f9baef22335de9cc8629ebbcd8ba047", package = "lab-auth" }
url = "2"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt", "chrono"] }

# Errors
anyhow = "1"
dotenvy = "0.15.7"

[features]
test-support = []

[dev-dependencies]
tailscale-rmcp = { path = ".", features = ["test-support"] }
tokio = { version = "1", features = ["full"] }
tempfile = "3"
